fix: overflowing folder and file names

--- a/src/ui/pages/Home/components/BrowseSection/components/FolderContentsTable/styles.module.scss
+++ b/src/ui/pages/Home/components/BrowseSection/components/FolderContentsTable/styles.module.scss
@@ -31,7 +31,7 @@
     position: absolute;
     width: 100%;
     cursor: pointer;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 20%);
 
     &.active {
         background-color: var(--accent-color-opaque);
