--- a/src/ui/shared/FileBadge/styles.module.scss
+++ b/src/ui/shared/FileBadge/styles.module.scss
@@ -15,3 +15,10 @@
     color: var(--bg-color);
 }
 
+.name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+}
+
